AC_PREREQ([2.68])
AC_INIT([rounded], [0.1], [ekmett@gmail.com])
AC_CONFIG_SRCDIR([cbits/mkMpfrDerivedConstants.c])
AM_INIT_AUTOMAKE([foreign])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([mpfr])
AC_OUTPUT
