Name:              fixed-precision
Version:           0.5.0
Synopsis:          Fixed Precision Arithmetic
Description:
    Numeric instances for MPFR that use the \"Implicit Configurations\" from 
    <http://www.cs.rutgers.edu/~ccshan/prepose/prepose.pdf>
    to choose a 'Rounding' and 'Precision'. For those that do not want to
    use reflection, explicit instances are provided for common precisions
    and for the built-in rounding modes.
    .
    > sin pi :: Fixed Down Double
    > fixed Near 256 (sin pi)
    
Homepage:          http://github.com/ekmett/fixed-precision
License:           BSD3
License-file:      LICENSE
Author:            Edward Kmett
Maintainer:        ekmett@gmail.com
Category:          Math
Build-type:        Custom
Cabal-version:     >=1.6
extra-source-files: 
  cbits/mkMpfrDerivedConstants.c

Library
  Exposed-modules: 
    Numeric.Fixed.Precision
    Numeric.Fixed.Rounding
    Numeric.Fixed.Prim
  Build-depends:   
    base >= 4 && < 5,
    reflection,
    integer-gmp >= 0.2.0 && < 0.3,
    ghc-prim,
    tagged,
    template-haskell >= 2.4.0 && < 2.6
  GHC-Options: -Wall
  c-sources:       
    cbits/mpfr-wrappers.cmm
  include-dirs: dist/include /opt/local/include
  extra-libraries: mpfr
  extra-lib-dirs: /opt/local/lib

