name:               precision
version:            0.0.1
synopsis:           Correctly-rounded arbitrary-precision floating point numbers using MPFR
homepage:           http://github.com/ekmett/rounded
license:            BSD3
license-file:       LICENSE
author:             Edward Kmett
maintainer:         ekmett@gmail.com
category:           Numeric, Math
build-type:         Custom
cabal-version:      >= 1.6
extra-source-files: cbits/mkMpfrDerivedConstants.c, cbits/alloc.c
description:
    Numeric instances for MPFR that use the \"Implicit Configurations\" from 
    <http://www.cs.rutgers.edu/~ccshan/prepose/prepose.pdf>
    to choose a 'Rounding' and 'Precision'. For those that do not want to
    use reflection, explicit instances are provided for common precisions
    and for the built-in rounding modes.
    .
    > sin pi :: Rounded TowardZero Double
    > rounded TowardZero 256 (sin pi)
    

source-repository head
  type: git
  location: git://github.com/ekmett/rounded.git

library
  exposed-modules: 
    Numeric.Rounded

  other-modules:
    Numeric.Rounded.Rounding
    Numeric.Rounded.Precision

  build-depends:   
    base             >= 4     && < 5,
    reflection       >= 0.5   && < 1.2,
    integer-gmp      >= 0.2   && < 0.5,
    ghc-prim,
    tagged           >= 0.2.3 && < 0.5,
    parallel,
    template-haskell >= 2.4   && < 2.8

  ghc-options: -Wall -Werror

  c-sources:
    cbits/mpfr-wrappers.cmm
  
  extra-libraries: mpfr
  
  extra-lib-dirs: /Users/pumpkin/Sandbox/Haskell/precision/dist/lib/

  include-dirs: dist/include

